# tesseract

./: .env.template  .gitignore  docker-compose.yml  pyproject.toml
docker/: Dockerfile  start.sh
src/: main.py
src/api/v1/: file_view.py
src/core/: custom_logging.py  settings.py
src/service/: orc_service.py  pdf_service.py
src/utils/: authentication.py
